<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_bottom_navigation"
            android:title="@string/menu_home_text"
    />
    <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_bottom_navigation"
            android:title="@string/menu_search_text"
    />
    <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite_border_bottom_navigation"
            android:title="@string/menu_favorite_text"
    />
    <item
            android:id="@+id/menu_shopping"
            android:icon="@drawable/ic_shopping_bottom_navigation"
            android:title="@string/menu_shopping_text"
    />
    <item
            android:id="@+id/menu_user"
            android:icon="@drawable/ic_person_bottom_navigation"
            android:title="@string/menu_user_text"
    />
</menu>