<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/controls_example_hint1"
                android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance"
    >
        <EditText
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/controls_example_hint2"
                android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/controls_example_hint3"
            android:inputType="text"
    />
    <RadioGroup
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <RadioButton
                android:id="@+id/rb_option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_option1"
        />
        <RadioButton
                android:id="@+id/rb_option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_option2"
        />
        <RadioButton
                android:id="@+id/rb_option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_option3"
                android:enabled="false"
                android:checked="true"
        />
        <RadioButton
                android:id="@+id/rb_option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_option4"
        />
    </RadioGroup>
    <CheckBox
            android:layout_marginTop="8dp"
            android:text="@string/controls_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:text="@string/controls_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
    />
    <CheckBox
            android:text="@string/controls_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:checked="true"
    />
    <CheckBox
            android:text="@string/controls_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
</LinearLayout>