<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="56dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_food"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginTop="16dp"
            app:riv_corner_radius="@dimen/fal_default_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/chicken_salad_wrap_image"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
    />

    <TextView
            style="@style/FoodApp_Subtitle2"
            android:id="@+id/text_subtitle_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:text="@string/payment_demo_product_title"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_food"
            app:layout_constraintTop_toTopOf="@+id/image_food"/>
    <TextView
            style="@style/FoodApp_CategoryLabel"
            android:id="@+id/text_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:text="@string/payment_demo_category"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_food"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_description"

    />

    <com.onappfeedback.foodapplibrary.Counter
            android:id="@+id/button_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/image_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_category"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            app:label="Quantity"
    />

    <TextView
            style="@style/FoodApp_LabelAccent"
            android:id="@+id/text_hotel_details"
            android:textStyle="italic"
            android:fontFamily="sans-serif-light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:text="@string/payment_label_hotel_details"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_food"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/button_counter"

    />

    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_hotel_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_food"
    />

    <ImageView
            android:id="@+id/image_offer_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_offer"
            android:tint="@color/falColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:contentDescription="@string/payment_accessibility_coupon_icon"
    />

    <TextView
            style="@style/FoodApp_Body2"
            android:id="@+id/text_apply_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            android:text="@string/payment_label_apply_coupon_code"
            app:layout_constraintStart_toEndOf="@+id/image_offer_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/falColorOnPrimary"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/text_apply_coupon"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_enter_coupon"
            android:contentDescription="@string/payment_move_forward_button"
    />

    <Button
            android:id="@+id/button_enter_coupon"
            style="@style/FoodApp_ButtonOutlineAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_action_enter_coupon"
            app:layout_constraintStart_toEndOf="@+id/image_offer_icon"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_apply_coupon"
            android:layout_marginTop="8dp"/>

    <View
            android:id="@+id/coupon_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/button_enter_coupon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            style="@style/FoodApp_Subhead2"
            android:id="@+id/text_amount_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_label_amount_details"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/coupon_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="#000000"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_amount_details"
            app:layout_constraintTop_toBottomOf="@+id/text_amount_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            tools:listitem="@layout/item_account_details"
            tools:orientation="vertical"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    />

    <View
            android:id="@+id/amount_details_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/rv_amount_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            style="@style/FoodApp_Body2"
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/amount_details_divider"
            android:text="@string/payment_label_total"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toStartOf="@id/text_total_amount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
    />

    <TextView
            style="@style/FoodApp_PriceText"
            android:id="@+id/text_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/falColorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_total"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/amount_details_divider"
            android:text="@string/payment_demo_amount"
            android:layout_marginTop="14dp"/>

    <View
            android:id="@+id/total_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            style="@style/FoodApp_Subhead2"
            android:id="@+id/text_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_label_payment_method"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/total_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="#000000"
    />

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rg_payment_methods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_payment_method"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
    >
        <RadioButton
                android:id="@+id/rb_option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_option_debit_card"
        />
        <RadioButton
                android:id="@+id/rb_option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_option_net_banking"
        />
        <RadioButton
                android:id="@+id/rb_option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_option_cash_on_delivery"
                android:checked="true"
        />
        <RadioButton
                android:id="@+id/rb_option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_option_others"
        />
    </RadioGroup>

    <View
            android:id="@+id/payment_method_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/rg_payment_methods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <include
            android:id="@+id/deliver_section"
            layout="@layout/section_deliver"
            app:layout_constraintTop_toBottomOf="@+id/payment_method_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
    />

    <Button
            style="@style/FoodApp_Button"
            android:id="@+id/button_order_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_order_now"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/deliver_section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>