<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_food"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:riv_corner_radius="@dimen/fal_default_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/chicken_burger_with_fries_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            style="@style/FoodApp_Subtitle2"
            android:id="@+id/text_subtitle_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="22dp"
            android:text="@string/search_demo_product_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_food"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_add"/>

    <Button style="@style/FoodApp_ButtonOutline"
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_action_add"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="200dp"
            app:layout_constraintStart_toEndOf="@+id/text_subtitle_description"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBaseline_toBaselineOf="@id/text_subtitle_description"
    />

    <com.onappfeedback.foodapplibrary.Counter
            android:id="@+id/button_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_description"
            app:layout_constraintHorizontal_bias="1.0"
            app:label="Quantity"
    />
    <TextView
            style="@style/FoodApp_Subhead1"
            android:id="@+id/text_waiting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_delivery_time"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawableTint="@color/falColorSecondary"
            android:drawablePadding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_counter"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_action_edit_address"
            android:drawableEnd="@drawable/ic_edit_black_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/falColorEditIcon"
            android:textColor="@color/falColorOnPrimary"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_waiting_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
    />

    <Button
            style="@style/FoodApp_Button"
            android:id="@+id/button_order_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_order_now"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/button_order_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            style="@style/FoodApp_Subtitle2"
            android:id="@+id/text_subtitle_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="25dp"
            android:text="@string/searhc_label_recommend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"/>
    
    <com.onappfeedback.foodapplibrary.FoodTile
            android:id="@+id/foodtile_recommend"
            android:layout_width="@dimen/fal_tile_size_medium"
            android:layout_height="@dimen/fal_tile_size_medium"
            android:layout_marginStart="@dimen/fal_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/fal_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_recommend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:food_image_src="@drawable/hamburger_with_ham_image"
            app:food_title="Hamburger with Ham"
            app:layout_constraintHorizontal_bias="0.0"
    />
</androidx.constraintlayout.widget.ConstraintLayout>