<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="66dp"
>
    <View
            android:id="@+id/deliver_to_home_top_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/text_deliver_to_home"
            app:layout_constraintVertical_chainStyle="spread"/>

    <ImageView
            android:id="@+id/image_scooter"
            android:layout_marginStart="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/deliver_to_home_top_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_scooter"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/deliver_accessibility_scooter_image"
    />
    <TextView
            android:id="@+id/text_deliver_to_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deliver_msg_deliver_to_home"
            app:layout_constraintStart_toEndOf="@+id/image_scooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliver_to_home_top_divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/text_waiting_time"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:layout_marginStart="14dp" android:layout_marginTop="8dp" android:layout_marginBottom="4dp"
            android:layout_marginEnd="14dp"/>
    <TextView
            android:id="@+id/text_waiting_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_delivery_time"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawableTint="@color/falColorSecondary"
            android:drawablePadding="8dp"
            android:textSize="12sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/image_scooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_deliver_to_home"
            app:layout_constraintBottom_toTopOf="@+id/text_add_address"
            android:layout_margin="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:fontFamily="sans-serif-medium"
            android:textStyle="italic"
            android:layout_marginStart="14dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
            android:layout_marginEnd="14dp"/>
    <TextView
            android:id="@+id/text_add_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deliver_action_add_address"
            android:textSize="12sp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_scooter"
            app:layout_constraintTop_toBottomOf="@+id/text_waiting_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/deliver_to_home_bottom_divider"
            android:layout_marginStart="14dp" android:layout_marginEnd="14dp" android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"/>
    <View
            android:id="@+id/deliver_to_home_bottom_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/falColorDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_address"
            app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>